Week3_Assignment1/VSProject/Assignment1/gen/STLanguageParser.cpp

// Generated from C:/Users/Tomonobu/Documents/home/Keyence/Antlr/ANTLRProject/Week3_Assignment1/Grammer/ST_Normal\STLanguageParser.g4 by ANTLR 4.7.2


#include "STLanguageParserListener.h"
#include "STLanguageParserVisitor.h"

#include "STLanguageParser.h"


using namespace antlrcpp;
using namespace antlr4;

STLanguageParser::STLanguageParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

STLanguageParser::~STLanguageParser() {
  delete _interpreter;
}

std::string STLanguageParser::getGrammarFileName() const {
  return "STLanguageParser.g4";
}

const std::vector<std::string>& STLanguageParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& STLanguageParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- InputContext ------------------------------------------------------------------

STLanguageParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::InputContext::EOF() {
  return getToken(STLanguageParser::EOF, 0);
}

std::vector<STLanguageParser::StatementContext *> STLanguageParser::InputContext::statement() {
  return getRuleContexts<STLanguageParser::StatementContext>();
}

STLanguageParser::StatementContext* STLanguageParser::InputContext::statement(size_t i) {
  return getRuleContext<STLanguageParser::StatementContext>(i);
}


size_t STLanguageParser::InputContext::getRuleIndex() const {
  return STLanguageParser::RuleInput;
}

void STLanguageParser::InputContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInput(this);
}

void STLanguageParser::InputContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInput(this);
}


antlrcpp::Any STLanguageParser::InputContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageParserVisitor*>(visitor))
    return parserVisitor->visitInput(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::InputContext* STLanguageParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 0, STLanguageParser::RuleInput);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STLanguageParser::TOKEN_RETURN)
      | (1ULL << STLanguageParser::TOKEN_FOR)
      | (1ULL << STLanguageParser::TOKEN_WHILE)
      | (1ULL << STLanguageParser::TOKEN_IF)
      | (1ULL << STLanguageParser::TOKEN_REPEAT)
      | (1ULL << STLanguageParser::TOKEN_REPEAT_EXIT)
      | (1ULL << STLanguageParser::TOKEN_CASE)
      | (1ULL << STLanguageParser::IDENTIFIER))) != 0)) {
      setState(68);
      statement();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(STLanguageParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

STLanguageParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STLanguageParser::Single_statementContext* STLanguageParser::StatementContext::single_statement() {
  return getRuleContext<STLanguageParser::Single_statementContext>(0);
}

tree::TerminalNode* STLanguageParser::StatementContext::STATEMENT_SEPARATOR() {
  return getToken(STLanguageParser::STATEMENT_SEPARATOR, 0);
}


size_t STLanguageParser::StatementContext::getRuleIndex() const {
  return STLanguageParser::RuleStatement;
}

void STLanguageParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void STLanguageParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any STLanguageParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::StatementContext* STLanguageParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, STLanguageParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    single_statement();
    setState(77);
    match(STLanguageParser::STATEMENT_SEPARATOR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Single_statementContext ------------------------------------------------------------------

STLanguageParser::Single_statementContext::Single_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STLanguageParser::Return_statementContext* STLanguageParser::Single_statementContext::return_statement() {
  return getRuleContext<STLanguageParser::Return_statementContext>(0);
}

STLanguageParser::If_statementContext* STLanguageParser::Single_statementContext::if_statement() {
  return getRuleContext<STLanguageParser::If_statementContext>(0);
}

STLanguageParser::While_statementContext* STLanguageParser::Single_statementContext::while_statement() {
  return getRuleContext<STLanguageParser::While_statementContext>(0);
}

STLanguageParser::For_statementContext* STLanguageParser::Single_statementContext::for_statement() {
  return getRuleContext<STLanguageParser::For_statementContext>(0);
}

STLanguageParser::Repeat_statementContext* STLanguageParser::Single_statementContext::repeat_statement() {
  return getRuleContext<STLanguageParser::Repeat_statementContext>(0);
}

STLanguageParser::Repeat_exit_statementContext* STLanguageParser::Single_statementContext::repeat_exit_statement() {
  return getRuleContext<STLanguageParser::Repeat_exit_statementContext>(0);
}

STLanguageParser::Case_statementContext* STLanguageParser::Single_statementContext::case_statement() {
  return getRuleContext<STLanguageParser::Case_statementContext>(0);
}

STLanguageParser::Assign_statementContext* STLanguageParser::Single_statementContext::assign_statement() {
  return getRuleContext<STLanguageParser::Assign_statementContext>(0);
}

STLanguageParser::Function_call_statementContext* STLanguageParser::Single_statementContext::function_call_statement() {
  return getRuleContext<STLanguageParser::Function_call_statementContext>(0);
}


size_t STLanguageParser::Single_statementContext::getRuleIndex() const {
  return STLanguageParser::RuleSingle_statement;
}

void STLanguageParser::Single_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSingle_statement(this);
}

void STLanguageParser::Single_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSingle_statement(this);
}


antlrcpp::Any STLanguageParser::Single_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageParserVisitor*>(visitor))
    return parserVisitor->visitSingle_statement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::Single_statementContext* STLanguageParser::single_statement() {
  Single_statementContext *_localctx = _tracker.createInstance<Single_statementContext>(_ctx, getState());
  enterRule(_localctx, 4, STLanguageParser::RuleSingle_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(79);
      return_statement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(80);
      if_statement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(81);
      while_statement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(82);
      for_statement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(83);
      repeat_statement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(84);
      repeat_exit_statement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(85);
      case_statement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(86);
      assign_statement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(87);
      function_call_statement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_call_statementContext ------------------------------------------------------------------

STLanguageParser::Function_call_statementContext::Function_call_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STLanguageParser::Function_callContext* STLanguageParser::Function_call_statementContext::function_call() {
  return getRuleContext<STLanguageParser::Function_callContext>(0);
}


size_t STLanguageParser::Function_call_statementContext::getRuleIndex() const {
  return STLanguageParser::RuleFunction_call_statement;
}

void STLanguageParser::Function_call_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_call_statement(this);
}

void STLanguageParser::Function_call_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_call_statement(this);
}


antlrcpp::Any STLanguageParser::Function_call_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageParserVisitor*>(visitor))
    return parserVisitor->visitFunction_call_statement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::Function_call_statementContext* STLanguageParser::function_call_statement() {
  Function_call_statementContext *_localctx = _tracker.createInstance<Function_call_statementContext>(_ctx, getState());
  enterRule(_localctx, 6, STLanguageParser::RuleFunction_call_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    function_call();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Return_statementContext ------------------------------------------------------------------

STLanguageParser::Return_statementContext::Return_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::Return_statementContext::TOKEN_RETURN() {
  return getToken(STLanguageParser::TOKEN_RETURN, 0);
}


size_t STLanguageParser::Return_statementContext::getRuleIndex() const {
  return STLanguageParser::RuleReturn_statement;
}

void STLanguageParser::Return_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturn_statement(this);
}

void STLanguageParser::Return_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturn_statement(this);
}


antlrcpp::Any STLanguageParser::Return_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageParserVisitor*>(visitor))
    return parserVisitor->visitReturn_statement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::Return_statementContext* STLanguageParser::return_statement() {
  Return_statementContext *_localctx = _tracker.createInstance<Return_statementContext>(_ctx, getState());
  enterRule(_localctx, 8, STLanguageParser::RuleReturn_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(STLanguageParser::TOKEN_RETURN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_statementContext ------------------------------------------------------------------

STLanguageParser::If_statementContext::If_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STLanguageParser::If_statement_main_clauseContext* STLanguageParser::If_statementContext::if_statement_main_clause() {
  return getRuleContext<STLanguageParser::If_statement_main_clauseContext>(0);
}

tree::TerminalNode* STLanguageParser::If_statementContext::TOKEN_IF_END() {
  return getToken(STLanguageParser::TOKEN_IF_END, 0);
}

std::vector<STLanguageParser::If_statement_elif_clauseContext *> STLanguageParser::If_statementContext::if_statement_elif_clause() {
  return getRuleContexts<STLanguageParser::If_statement_elif_clauseContext>();
}

STLanguageParser::If_statement_elif_clauseContext* STLanguageParser::If_statementContext::if_statement_elif_clause(size_t i) {
  return getRuleContext<STLanguageParser::If_statement_elif_clauseContext>(i);
}

STLanguageParser::If_statement_else_clauseContext* STLanguageParser::If_statementContext::if_statement_else_clause() {
  return getRuleContext<STLanguageParser::If_statement_else_clauseContext>(0);
}


size_t STLanguageParser::If_statementContext::getRuleIndex() const {
  return STLanguageParser::RuleIf_statement;
}

void STLanguageParser::If_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_statement(this);
}

void STLanguageParser::If_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_statement(this);
}


antlrcpp::Any STLanguageParser::If_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageParserVisitor*>(visitor))
    return parserVisitor->visitIf_statement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::If_statementContext* STLanguageParser::if_statement() {
  If_statementContext *_localctx = _tracker.createInstance<If_statementContext>(_ctx, getState());
  enterRule(_localctx, 10, STLanguageParser::RuleIf_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    if_statement_main_clause();
    setState(98);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == STLanguageParser::TOKEN_IF_ELIF) {
      setState(95);
      if_statement_elif_clause();
      setState(100);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(102);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == STLanguageParser::TOKEN_ELSE) {
      setState(101);
      if_statement_else_clause();
    }
    setState(104);
    match(STLanguageParser::TOKEN_IF_END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_statement_main_clauseContext ------------------------------------------------------------------

STLanguageParser::If_statement_main_clauseContext::If_statement_main_clauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::If_statement_main_clauseContext::TOKEN_IF() {
  return getToken(STLanguageParser::TOKEN_IF, 0);
}

STLanguageParser::If_clauseContext* STLanguageParser::If_statement_main_clauseContext::if_clause() {
  return getRuleContext<STLanguageParser::If_clauseContext>(0);
}


size_t STLanguageParser::If_statement_main_clauseContext::getRuleIndex() const {
  return STLanguageParser::RuleIf_statement_main_clause;
}

void STLanguageParser::If_statement_main_clauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_statement_main_clause(this);
}

void STLanguageParser::If_statement_main_clauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_statement_main_clause(this);
}


antlrcpp::Any STLanguageParser::If_statement_main_clauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageParserVisitor*>(visitor))
    return parserVisitor->visitIf_statement_main_clause(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::If_statement_main_clauseContext* STLanguageParser::if_statement_main_clause() {
  If_statement_main_clauseContext *_localctx = _tracker.createInstance<If_statement_main_clauseContext>(_ctx, getState());
  enterRule(_localctx, 12, STLanguageParser::RuleIf_statement_main_clause);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(STLanguageParser::TOKEN_IF);
    setState(107);
    if_clause();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_statement_elif_clauseContext ------------------------------------------------------------------

STLanguageParser::If_statement_elif_clauseContext::If_statement_elif_clauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::If_statement_elif_clauseContext::TOKEN_IF_ELIF() {
  return getToken(STLanguageParser::TOKEN_IF_ELIF, 0);
}

STLanguageParser::If_clauseContext* STLanguageParser::If_statement_elif_clauseContext::if_clause() {
  return getRuleContext<STLanguageParser::If_clauseContext>(0);
}


size_t STLanguageParser::If_statement_elif_clauseContext::getRuleIndex() const {
  return STLanguageParser::RuleIf_statement_elif_clause;
}

void STLanguageParser::If_statement_elif_clauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_statement_elif_clause(this);
}

void STLanguageParser::If_statement_elif_clauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_statement_elif_clause(this);
}


antlrcpp::Any STLanguageParser::If_statement_elif_clauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageParserVisitor*>(visitor))
    return parserVisitor->visitIf_statement_elif_clause(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::If_statement_elif_clauseContext* STLanguageParser::if_statement_elif_clause() {
  If_statement_elif_clauseContext *_localctx = _tracker.createInstance<If_statement_elif_clauseContext>(_ctx, getState());
  enterRule(_localctx, 14, STLanguageParser::RuleIf_statement_elif_clause);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(STLanguageParser::TOKEN_IF_ELIF);
    setState(110);
    if_clause();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_statement_else_clauseContext ------------------------------------------------------------------

STLanguageParser::If_statement_else_clauseContext::If_statement_else_clauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::If_statement_else_clauseContext::TOKEN_ELSE() {
  return getToken(STLanguageParser::TOKEN_ELSE, 0);
}

std::vector<STLanguageParser::StatementContext *> STLanguageParser::If_statement_else_clauseContext::statement() {
  return getRuleContexts<STLanguageParser::StatementContext>();
}

STLanguageParser::StatementContext* STLanguageParser::If_statement_else_clauseContext::statement(size_t i) {
  return getRuleContext<STLanguageParser::StatementContext>(i);
}


size_t STLanguageParser::If_statement_else_clauseContext::getRuleIndex() const {
  return STLanguageParser::RuleIf_statement_else_clause;
}

void STLanguageParser::If_statement_else_clauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_statement_else_clause(this);
}

void STLanguageParser::If_statement_else_clauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_statement_else_clause(this);
}


antlrcpp::Any STLanguageParser::If_statement_else_clauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageParserVisitor*>(visitor))
    return parserVisitor->visitIf_statement_else_clause(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::If_statement_else_clauseContext* STLanguageParser::if_statement_else_clause() {
  If_statement_else_clauseContext *_localctx = _tracker.createInstance<If_statement_else_clauseContext>(_ctx, getState());
  enterRule(_localctx, 16, STLanguageParser::RuleIf_statement_else_clause);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    match(STLanguageParser::TOKEN_ELSE);
    setState(114); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(113);
      statement();
      setState(116); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STLanguageParser::TOKEN_RETURN)
      | (1ULL << STLanguageParser::TOKEN_FOR)
      | (1ULL << STLanguageParser::TOKEN_WHILE)
      | (1ULL << STLanguageParser::TOKEN_IF)
      | (1ULL << STLanguageParser::TOKEN_REPEAT)
      | (1ULL << STLanguageParser::TOKEN_REPEAT_EXIT)
      | (1ULL << STLanguageParser::TOKEN_CASE)
      | (1ULL << STLanguageParser::IDENTIFIER))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_clauseContext ------------------------------------------------------------------

STLanguageParser::If_clauseContext::If_clauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STLanguageParser::ExpressionContext* STLanguageParser::If_clauseContext::expression() {
  return getRuleContext<STLanguageParser::ExpressionContext>(0);
}

tree::TerminalNode* STLanguageParser::If_clauseContext::TOKEN_IF_THEN() {
  return getToken(STLanguageParser::TOKEN_IF_THEN, 0);
}

std::vector<STLanguageParser::StatementContext *> STLanguageParser::If_clauseContext::statement() {
  return getRuleContexts<STLanguageParser::StatementContext>();
}

STLanguageParser::StatementContext* STLanguageParser::If_clauseContext::statement(size_t i) {
  return getRuleContext<STLanguageParser::StatementContext>(i);
}


size_t STLanguageParser::If_clauseContext::getRuleIndex() const {
  return STLanguageParser::RuleIf_clause;
}

void STLanguageParser::If_clauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_clause(this);
}

void STLanguageParser::If_clauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_clause(this);
}


antlrcpp::Any STLanguageParser::If_clauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageParserVisitor*>(visitor))
    return parserVisitor->visitIf_clause(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::If_clauseContext* STLanguageParser::if_clause() {
  If_clauseContext *_localctx = _tracker.createInstance<If_clauseContext>(_ctx, getState());
  enterRule(_localctx, 18, STLanguageParser::RuleIf_clause);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    expression(0);
    setState(119);
    match(STLanguageParser::TOKEN_IF_THEN);
    setState(121); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(120);
      statement();
      setState(123); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STLanguageParser::TOKEN_RETURN)
      | (1ULL << STLanguageParser::TOKEN_FOR)
      | (1ULL << STLanguageParser::TOKEN_WHILE)
      | (1ULL << STLanguageParser::TOKEN_IF)
      | (1ULL << STLanguageParser::TOKEN_REPEAT)
      | (1ULL << STLanguageParser::TOKEN_REPEAT_EXIT)
      | (1ULL << STLanguageParser::TOKEN_CASE)
      | (1ULL << STLanguageParser::IDENTIFIER))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- While_statementContext ------------------------------------------------------------------
